syntax = "proto3";

option java_package = "next.net.netty.test.proto";
option java_outer_classname = "PacketCoreWapper";
option csharp_namespace = "next.client.proto";

import "Packet1.proto";
import "Packet2.proto";

message PacketCore
{
    repeated int32 type = 1;
    
    Packet1 Packet1 = 101;
    Packet2 Packet2 = 102;
}